<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loteria</string>
    <string name="action_settings">Settings</string>
    <string name="action_capture">Captura de Billete</string>
    <string name="action_agregar">Agregar Billete</string>
    <string name="action_eliminar">Eliminar Billete</string>
    <string name="action_renombrar">Renombrar Billete</string>

    <string name="title_activity_captura_billete">Ingreso de Billete</string>
    <string name="capture_title">Ingrese nombre para reconocer su boleto</string>
    <string name="warning_title">   </string>
    <string name="hint_nombre">Nombre del boleto</string>
    <string name="capture_spinner">Elija tipo de boleto</string>
    <string name="codigo_billete">"Capture imagen para obtener código"</string>
    <string name="header_codigo_billete">"Código del billete:"</string>
    <string name="capture_button">Fotografíar código</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancelar</string>

    <string name="title_activity_foto_codigo">Captura de código</string>
    <string name="submit_button">Confirmar</string>
    <string name="scan_button">Retomar</string>

    <string name="anuncio">Aún no se ha realizado el sorteo\nIntentelo más tarde</string>
    <string name="resultadosKino">Resultados Kino</string>
    <string name="resultadosReKino">Resultados ReKino</string>
    <string name="resultadosChanchito">Resultados Chanchito</string>

</resources>

    <!--

    <string name="app_name">Loteria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_reload">Volver a cargar resultado</string>
    <string name="action_capture">Captura de Billete</string>
    <string name="action_agregar">Agregar Billete</string>
    <string name="action_settings">Settings</string>
    <string name="action_borrar">Eliminar Billete</string>
    <string name="action_renombrar">Renombrar Billete</string>
    <string name="capture_button">Fotografíar código</string>
    <string name="cancel_button">Cancelar</string>
    <string name="ok_button">OK</string>
    <string name="capture_title">Ingrese nombre para reconocer su boleto</string>
    <string name="warning_title">   </string>
    <string name="hint_nombre">Nombre del boleto</string>
    <string name="capture_spinner">Elija tipo de boleto</string>
    <string name="title_activity_captura_billete">Ingreso de Billete</string>
    <string name="title_activity_display_imagen">Previsualización</string>
    <string name="back_image_button">Volver</string>
    <string name="title_activity_camera_test">CameraTestActivity</string>
    <string name="scan_button">Retomar</string>
    <string name="submit_button">Confirmar</string>
    <string name="codigo_billete">"Capture imagen para obtener código"</string>
    <string name="header_codigo_billete">"Código del billete:"</string>
    -->