<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/parent"
    tools:context="com.loteria20.app.Captura_Billete"
    android:background="#ffffffff">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="always">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/capture_title"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:hint="@string/hint_nombre"
                android:id="@+id/nombre" />

            <TextView
                android:id="@+id/warning_title"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="#ffff0000"
                android:text="@string/warning_title"/>

            <Spinner
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/capture_spinner"
                android:id="@+id/spinner1" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/header_codigo_billete"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/codigo_billete"
                android:layout_gravity="center_horizontal"
                android:text="@string/codigo_billete"/>

            <Button
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_button"
                android:onClick="tomarFoto" />

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:onClick="cancelar" />

                <Button
                    android:id="@+id/ok_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_button"
                    android:enabled="false"
                    android:onClick="submit" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
